[package]
name = "wrtcli"
version = "0.1.0"
edition = "2021"
authors = ["OpenWrt CLI Team"]
description = "A CLI tool for managing OpenWrt devices"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
dirs = "5.0"
async-trait = "0.1"
ssh2 = "0.9"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.9"
flate2 = "1.0"
tar = "0.4"
